Fixed issue on ie.

--- a/spring-2015/sass/pages/_four-steps-to-create.scss
+++ b/spring-2015/sass/pages/_four-steps-to-create.scss
@@ -538,12 +538,16 @@ body.four-steps-to-create{
             width: em(280);
             margin: 0 auto;
             margin-top: em(20);
+
             @media (min-width: $screen-sm-min){
               margin-top: 0;
               margin: 0;
               float: left;
               width: 60%;
             }            
+            img{
+              max-width: 100%;
+            }
           }
           .text{
             width: em(260);
